--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "tailwindCSS.classAttributes": [
         "class"
     ],
-    "tailwindCSS.emmetCompletions": true
+    "tailwindCSS.emmetCompletions": true,
+    "debug.allowBreakpointsEverywhere": true
 }
