run eslit format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,9 @@
 {
-    "css.validate": false,
-    "editor.quickSuggestions": {
-        "strings": true
-    },
-    "tailwindCSS.classAttributes": [
-        "class"
-    ],
-    "tailwindCSS.emmetCompletions": true,
-    "debug.allowBreakpointsEverywhere": true
+	"css.validate": false,
+	"editor.quickSuggestions": {
+		"strings": true
+	},
+	"tailwindCSS.classAttributes": ["class"],
+	"tailwindCSS.emmetCompletions": true,
+	"debug.allowBreakpointsEverywhere": true
 }
